@@ -668,6 +668,7 @@ fully support the editing toolbar, but was found to be too confusing.
   "-resize 100x35!"; some thumbs were off due to differences in rounding and
   would be generated smaller than expected.
 * (bug 5062) Width sometimes one pixel short when using maximum heights
+* Purge thumbnails and metadata cache for action=purge on an image page
 
 
 === Caveats ===
